--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,16 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.2.4", features = ["web", "router"] }
+js-sys = "0.3.60"
 pulldown-cmark = "0.9.2"
+wasm-bindgen = "0.2.83"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'CanvasRenderingContext2d',
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'Window',
+]
